# Medagents_Finale

./: .gitignore  Dockerfile  README.md  dataset.json  environment.py  main.py  memory.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  server.py  task.py  training_stub.py
agents/: __init__.py  gp.py  oversight.py  pathologist.py  radiologist.py  specialist.py  supervisor.py
server/: __init__.py  app.py
utils/: __init__.py  graph.py  logger.py
